--- a/template/index.html
+++ b/template/index.html
@@ -10,8 +10,10 @@
   <link href="css/style.css" rel="stylesheet" media="screen, print">
   <link href="img/favicon.ico" rel="icon" type="image/x-icon">
   <script src="vendor/polyfill.js"></script>
+  <script src="vendor/mermaid.min.js"></script>
 </head>
 <body class="container-fluid">
+
 
 <script id="template-sidenav" type="text/x-handlebars-template">
 <nav id="scrollingNav">
